--- a/creative-work.html
+++ b/creative-work.html
@@ -32,12 +32,35 @@
         /* ---- NAV ---- */
         nav { position: fixed; top: 0; width: 100%; z-index: 100; background: rgba(255,255,255,0.92); backdrop-filter: blur(12px); border-bottom: 1px solid transparent; transition: border-color 0.3s, box-shadow 0.3s; }
         nav.scrolled { border-color: var(--gray-300); box-shadow: 0 2px 20px rgba(0,0,0,0.06); }
-        .nav-inner { max-width: 1200px; margin: 0 auto; padding: 1.25rem 2rem; display: flex; align-items: center; justify-content: space-between; }
+        .nav-inner { max-width: 1200px; margin: 0 auto; padding: 1.25rem 2rem; display: flex; align-items: center; justify-content: space-between; position: relative; }
         .nav-logo { font-family: var(--font-display); font-size: 1.5rem; font-weight: 700; color: var(--dark); text-decoration: none; }
         .nav-logo span { color: var(--pink); }
         .nav-links { display: flex; list-style: none; gap: 2.5rem; align-items: center; }
         .nav-links a { text-decoration: none; color: var(--gray-600); font-weight: 500; font-size: 0.9rem; transition: color 0.2s; }
         .nav-links a:hover, .nav-links a.active { color: var(--pink); }
+        .nav-toggle {
+            display: none;
+            width: 42px;
+            height: 42px;
+            border: 1px solid var(--gray-300);
+            border-radius: 10px;
+            background: var(--white);
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            gap: 4px;
+            cursor: pointer;
+        }
+        .nav-toggle span {
+            width: 18px;
+            height: 2px;
+            background: var(--gray-900);
+            border-radius: 2px;
+            transition: transform 0.2s, opacity 0.2s;
+        }
+        .nav-toggle.open span:nth-child(1) { transform: translateY(6px) rotate(45deg); }
+        .nav-toggle.open span:nth-child(2) { opacity: 0; }
+        .nav-toggle.open span:nth-child(3) { transform: translateY(-6px) rotate(-45deg); }
 
         /* DROPDOWN */
         .nav-dropdown { position: relative; }
@@ -304,10 +327,49 @@
             .tab-count { display: none; }
             .clb-prev { left: -2rem; }
             .clb-next { right: -2rem; }
+            .nav-toggle { display: inline-flex; }
+            .nav-links {
+                display: none;
+                position: absolute;
+                top: calc(100% + 0.55rem);
+                right: 2rem;
+                width: min(280px, calc(100vw - 4rem));
+                padding: 0.75rem;
+                border: 1px solid var(--gray-300);
+                border-radius: 14px;
+                background: var(--white);
+                box-shadow: 0 12px 30px rgba(0,0,0,0.12);
+                gap: 0;
+                flex-direction: column;
+                z-index: 250;
+            }
+            .nav-links.open { display: flex; }
+            .nav-links li { width: 100%; }
+            .nav-links a,
+            .nav-dropdown-toggle {
+                display: block;
+                width: 100%;
+                padding: 0.7rem 0.85rem;
+                border-radius: 8px;
+                font-size: 0.92rem;
+            }
+            .nav-dropdown { width: 100%; }
+            .nav-dropdown-menu {
+                position: static;
+                transform: none;
+                margin-top: 0;
+                padding: 0 0 0 0.75rem;
+                opacity: 1;
+                visibility: visible;
+                box-shadow: none;
+                border: none;
+                min-width: 0;
+                background: transparent;
+            }
+            .nav-dropdown-menu a { padding: 0.55rem 0.85rem; }
         }
         @media (max-width: 480px) {
-            .nav-links { gap: 1rem; font-size: 0.82rem; }
-            .nav-links li:last-child { display: none; }
+            .tab-inner { padding: 0 1rem; }
         }
     </style>
 </head>
@@ -317,7 +379,10 @@
 <nav id="navbar">
     <div class="nav-inner">
         <a href="index.html" class="nav-logo">Nikki<span>.</span></a>
-        <ul class="nav-links">
+        <button class="nav-toggle" id="navToggle" aria-label="Open navigation" aria-controls="primary-nav" aria-expanded="false">
+            <span></span><span></span><span></span>
+        </button>
+        <ul class="nav-links" id="primary-nav">
             <li><a href="index.html#about">About</a></li>
             <li><a href="index.html#experience">Experience</a></li>
             <li class="nav-dropdown">
@@ -848,6 +913,23 @@
 window.addEventListener('scroll', () => {
     document.getElementById('navbar').classList.toggle('scrolled', window.scrollY > 20);
 });
+
+const navToggle = document.getElementById('navToggle');
+const primaryNav = document.getElementById('primary-nav');
+if (navToggle && primaryNav) {
+    navToggle.addEventListener('click', () => {
+        const open = primaryNav.classList.toggle('open');
+        navToggle.classList.toggle('open', open);
+        navToggle.setAttribute('aria-expanded', String(open));
+    });
+    primaryNav.querySelectorAll('a').forEach((link) => {
+        link.addEventListener('click', () => {
+            primaryNav.classList.remove('open');
+            navToggle.classList.remove('open');
+            navToggle.setAttribute('aria-expanded', 'false');
+        });
+    });
+}
 
 // ---- TABS ----
 document.querySelectorAll('.tab-btn').forEach(btn => {
